--- a/info.yaml
+++ b/info.yaml
@@ -1,6 +1,6 @@
 project:
   title: "4-bit Counter"
   description: "Simple 4-bit synchronous counter for TinyTapeout"
-  author: "Ваше Имя"
+  author: "Галаюда Александр"
   clock_hz: 10000000
   top_module: "user_project_wrapper"
