--- a/info.yaml
+++ b/info.yaml
@@ -1,9 +1,54 @@
+# Tiny Tapeout project information
 project:
-  title: "4-bit Counter"
-  description: "Simple 4-bit synchronous counter for TinyTapeout"
-  author: "Галаюда Александр"
-  clock_hz: 10000000
-  top_module: "user_project_wrapper"
+  title:        "4-bit Counter"
+  author:       "Галаюда Александр"
+  discord:      ""  # опционально — ваш ник в Discord для уведомлений
+  description:  "Simple 4-bit synchronous counter for TinyTapeout shuttle"
+  language:     "Verilog"
+  clock_hz:     10000000
 
-# Do not change!
+  # How many tiles your design occupies? A single tile is about 167x108 uM.
+  tiles: "1x1"  # Ваш счётчик занимает << 1 тайла, но минимум 1x1
+
+  # ВАЖНО: имя модуля ДОЛЖНО начинаться с tt_um_ !
+  top_module:  "tt_um_counter_galayuda"
+
+  # List your project's source files here (относительно ./src/)
+  source_files:
+    - "counter.v"
+    - "user_project_wrapper.v"
+
+# Pinout description for datasheet
+pinout:
+  # Inputs (ui[0]..ui[7] — внешние входы кристалла)
+  ui[0]: ""
+  ui[1]: ""
+  ui[2]: ""
+  ui[3]: ""
+  ui[4]: ""
+  ui[5]: ""
+  ui[6]: ""
+  ui[7]: ""
+
+  # Outputs (uo[0]..uo[7] — внешние выходы кристалла)
+  uo[0]: "count[0]"  # Младший бит счётчика
+  uo[1]: "count[1]"
+  uo[2]: "count[2]"
+  uo[3]: "count[3]"  # Старший бит счётчика
+  uo[4]: ""
+  uo[5]: ""
+  uo[6]: ""
+  uo[7]: ""
+
+  # Bidirectional pins (uio[0]..uio[7])
+  uio[0]: ""
+  uio[1]: ""
+  uio[2]: ""
+  uio[3]: ""
+  uio[4]: ""
+  uio[5]: ""
+  uio[6]: ""
+  uio[7]: ""
+
+# DO NOT CHANGE!
 yaml_version: 6
